deploy/fauxinnati/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fauxinnati
  namespace: fauxinnati
  labels:
    app: fauxinnati
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
spec:
  to:
    kind: Service
    name: fauxinnati
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
